# ArenaForge

./: .gitignore  ArenaForge (Linux).sublime-settings  ArenaForge (OSX).sublime-settings  ArenaForge (Windows).sublime-settings  ArenaForge.sublime-settings  ContestHandler.py  Cpp_Intellij_Sense.py  Default (Linux).sublime-keymap  Default (OSX).sublime-keymap  Default (Windows).sublime-keymap  Default.sublime-commands  LICENSE  Main.sublime-menu  NumberSpliter.py  README.ja.md  README.ko.md  README.md  README.ru.md  README.zh-CN.md  arena_forge_format.py  arenaforge_window_commands.py  contest_plugin.py  dependencies.json  diagnostics_plugin.py  formatting_plugin.py  history_plugin.py  number_splitter.py  olympic_funcs.py  pyproject.toml  run_history.py  run_panel_plugin.py  settings.py  settings_plugin.py  stress_manager.py  template_plugin.py  test_edit.py  test_manager.py  window_commands_plugin.py
.github/workflows/: ci.yml
.mimocode/plans/: 1782216791601-calm-wolf.md
Highlight/: CppVarHighlight.py  compile.html  test_config.html  test_edit.html  test_interface.py  test_next.html  test_styles.css  test_styles_spacegray.css  test_styles_spacegraylight.css
Modules/: ProcessManager.py
arena_forge/: __init__.py  product.py
arena_forge/adapters/: __init__.py  settings_loader.py
arena_forge/adapters/i18n/: __init__.py  catalog.py
arena_forge/adapters/providers/: __init__.py  acwing.py  atcoder.py  base.py  codeforces.py  codeforces_submit.py  luogu.py  registry.py  submission_service.py
arena_forge/adapters/runners/: __init__.py  diagnostics.py  process_manager.py  settings_runner.py  subprocess_runner.py
arena_forge/adapters/security/: __init__.py  keyring_store.py
arena_forge/adapters/storage/: __init__.py  json_repository.py  workspace.py
arena_forge/adapters/sublime/: __init__.py  bootstrap.py  command_action_catalog.py  contest_commands.py  debug_overlay_commands.py  debug_protocol.py  diagnostics_commands.py  doctor_report.py  format_commands.py  history_commands.py  (+35 more)
arena_forge/core/: __init__.py  domain.py  ports.py  services.py  usecases.py
arena_forge/formatting/: __init__.py
arena_forge/locales/: en.json  ja.json  ko.json  ru.json  zh-Hans.json
debug_backends/: cpp_osx_debugger.py  lldb_bridge.py  registry.py
debuggers/: Cpp_OSX_Debugger.py  debugger_info.py  debugod.py
docs/: AI_HANDOFF.md  ARCHITECTURE.md  CONFIGURATION.md  I18N.md  ITERATIONS.md  MIGRATION.md  PCH.md  QUICKSTART.md  QUICKSTART.zh-CN.md  SUBLIME_SHELL_MIGRATION.md
highlight_assets/: cpp_var_highlight.py  test_accdec.html  test_running.html  test_styles.css  test_styles_spacegray.css  test_styles_spacegraylight.css
plugin_support/: process_manager.py
plugin_support/template_generation/: generator.py
scripts/: build_release.py  link_sublime_package.ps1  pch.sh
tests/: __init__.py  helpers.py  test_acwing_provider.py  test_atcoder_provider.py  test_codeforces_provider.py  test_codeforces_submit.py  test_command_surfaces.py  test_contest_commands.py  test_debug_overlay_commands.py  test_diagnostics_commands.py  test_diagnostics_runner.py  test_doctor_report.py  test_formatting_adapters.py  test_formatting_commands.py  test_formatting_discovery.py  test_formatting_process.py  test_formatting_ranges.py  test_formatting_templates.py  test_history_commands.py  test_i18n.py  test_json_repository.py  test_keyring_store.py  test_locale_catalogs.py  test_luogu_provider.py  test_messages.py  test_package_resources.py  test_performance_benchmarks.py  test_process_manager_compile_cache.py  test_provider_registry.py  test_render_assets.py  test_root_bridge.py  test_run_panel_action_handlers.py  test_run_panel_action_request.py  test_run_panel_command_mixin.py  test_run_panel_command_support.py  test_run_panel_controller_state.py  test_run_panel_debug_actions.py  test_run_panel_display_actions.py  test_run_panel_edit_actions.py  test_run_panel_history_navigation.py  (+19 more)
(+80 files in other folders)
