[project]
name = "arena-forge"
version = "3.0.0"
description = "ArenaForge competitive-programming workbench for Sublime Text"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "keyring>=24.3,<25.6",
]

[dependency-groups]
dev = [
  "mypy>=1.10,<1.18",
  "pytest>=7.4,<8.0",
  "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arena_forge"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_classes = ["*Tests"]
addopts = ["-p", "no:cacheprovider"]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]

[tool.mypy]
python_version = "3.8"
files = [
  "arena_forge/core",
  "arena_forge/adapters/storage",
  "arena_forge/adapters/runners/diagnostics.py",
  "arena_forge/adapters/sublime/doctor_report.py",
  "arena_forge/adapters/sublime/run_panel/logic.py",
  "arena_forge/adapters/sublime/run_panel/action_request.py",
  "arena_forge/adapters/sublime/run_panel/controller_state.py",
]
strict = true
warn_unused_ignores = true
